# fasthtml-invoice-parser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
