[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
name = "fasthtml_invoice_parser"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["python-fasthtml>=0.12.4,<0.13", "monsterui>=1.0.11,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fasthtml_invoice_parser = { path = ".", editable = true }

[tool.pixi.tasks]
